# balena-azure-iot-sample

./: CMakeLists.txt  Dockerfile
c/: CMakeLists.txt
c/common/: CMakeLists.txt
c/common/tests/: CMakeLists.txt
c/common/tests/agenttime_unittests/: CMakeLists.txt
c/common/tests/base64_unittests/: CMakeLists.txt
c/common/tests/buffer_unittests/: CMakeLists.txt
c/common/tests/crtabstractions_unittests/: CMakeLists.txt
c/common/tests/doublylinkedlist_unittests/: CMakeLists.txt
c/common/tests/gballoc_unittests/: CMakeLists.txt
c/common/tests/gballoc_without_init_unittests/: CMakeLists.txt
c/common/tests/hmacsha256_unittests/: CMakeLists.txt
c/common/tests/httpapiex_unittests/: CMakeLists.txt
c/common/tests/httpapiexsas_unittests/: CMakeLists.txt
c/common/tests/httpheaders_unittests/: CMakeLists.txt
c/common/tests/lock_unittests/: CMakeLists.txt
c/common/tests/map_unittests/: CMakeLists.txt
c/common/tests/sastoken_unittests/: CMakeLists.txt
c/common/tests/string_tokenizer_unittests/: CMakeLists.txt
c/common/tests/strings_unittests/: CMakeLists.txt
c/common/tests/urlencode_unittests/: CMakeLists.txt
c/common/tests/vector_unittests/: CMakeLists.txt
c/iothub_client/: CMakeLists.txt
c/serializer/: CMakeLists.txt
c/testtools/: CMakeLists.txt
c/testtools/ctest/: CMakeLists.txt
c/testtools/micromock/: CMakeLists.txt
cmake/: FindQPID_PROTON.cmake  compiler_options.cmake  dependencies.cmake  version.cmake
node/device/samples/: remote_monitoring.js
tools/DeviceExplorerPortal/: DeviceExplorerPortal.sln
tools/DeviceExplorerPortal/DeviceExplorerPortal/: DeviceExplorerPortal.csproj  Global.asax  Global.asax.cs  Web.config  packages.config
tools/DeviceExplorerPortal/DeviceExplorerPortal/App_Start/: RouteConfig.cs
tools/DeviceExplorerPortal/DeviceExplorerPortal/Controllers/: ConfigurationController.cs  HomeController.cs  MainController.cs  ManagementController.cs
tools/DeviceExplorerPortal/DeviceExplorerPortal/Models/: ConnectionInformation.cs  DeviceCreation.cs  DeviceEntity.cs  DevicesProcessor.cs
tools/DeviceExplorerPortal/DeviceExplorerPortal/Properties/: AssemblyInfo.cs
tools/DeviceExplorerPortal/DeviceExplorerPortal/Scripts/kendo/2015.2.805/: kendo.all-vsdoc.js  kendo.all.min.intellisense.js  kendo.mobile-vsdoc.js  kendo.web-vsdoc.js  kendo.web.min.intellisense.js
tools/DeviceExplorerPortal/DeviceExplorerPortal/Views/: web.config
tools/DeviceExplorerPortal/DeviceExplorerPortal/Views/Configuration/: Index.cshtml
tools/DeviceExplorerPortal/DeviceExplorerPortal/Views/Home/: Index.cshtml
tools/DeviceExplorerPortal/DeviceExplorerPortal/Views/Management/: Create.cshtml  CreateDevice.cshtml  Index.cshtml
tools/DeviceExplorerPortal/DeviceExplorerPortal/Views/Shared/: _Layout.cshtml
